提醒功能: 增加了filter, redirect改为array, 删掉hdt

--- a/src/64_orderSheet.xlsm/Sheet2.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet2.sheet.cls
@@ -1,3 +1,5 @@
+Option Explicit
+
 Private Sub Worksheet_Change(ByVal target As Range)
     Dim timeFormatColumns As Variant
     timeFormatColumns = Array(6, 7)
