更改了逾期提醒的逻辑, 水分汇总表的vlookup可以自动更新

--- a/src/64_orderSheet.xlsm/Sheet4.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet4.sheet.cls
@@ -2,15 +2,23 @@ Option Explicit
 
 Private Sub Worksheet_Change(ByVal target As Range)
     Dim timeFormatColumns As Variant
-    timeFormatColumns = Array(7, 8)
+    Dim beginTimeColumn, endTimeColumn As Integer
+    
+    beginTimeColumn = Util.getColumnIndex("切烘加香段", "烘丝开始时间")
+    endTimeColumn = Util.getColumnIndex("切烘加香段", "烘丝结束时间")
+    
+    timeFormatColumns = Array(beginTimeColumn, endTimeColumn)
     
     If Not IsArray(target.value) Then
     
         Dim currentTobacco, nextTobacco As String
         Dim dateOfSelectedRow As Variant
-        Dim beginTimeColumn, endTimeColumn As Integer
-        beginTimeColumn = 7
-        endTimeColumn = 8
+        Dim dateColIndex, tobaccoColIndex, storeNameColIndex, serialNumColIndex As Integer
+        
+        dateColIndex = Util.getColumnIndex("切烘加香段", "日期")
+        tobaccoColIndex = Util.getColumnIndex("切烘加香段", "牌号")
+        storeNameColIndex = Util.getColumnIndex("切烘加香段", "入柜")
+        serialNumColIndex = Util.getColumnIndex("切烘加香段", "序号")
         
         If Util.IsInArray(target.Column, timeFormatColumns) And Util.IsNum(target.value) Then
             'inputTime's column is time format, which is a double type
@@ -29,9 +37,11 @@ Private Sub Worksheet_Change(ByVal target As Range)
             '开始时间列触发批开始语音提醒
             Dim storeName As String
             
-            currentTobacco = target.offset(0, 3 - target.Column).value
-            dateOfSelectedRow = target.offset(0, 1 - target.Column).value
-            storeName = target.offset(0, 6 - target.Column).value
+            
+            currentTobacco = target.Offset(0, tobaccoColIndex - target.Column).value
+            dateOfSelectedRow = target.Offset(0, dateColIndex - target.Column).value
+            storeName = target.Offset(0, storeNameColIndex - target.Column).value
+            
             'Debug.Print (currentTobacco)
             'Debug.Print dateOfSelectedRow
             
@@ -54,13 +64,14 @@ Private Sub Worksheet_Change(ByVal target As Range)
             '结束时间
             '不再自动填写下一批的开始时间
             Dim serialNum As Range
-            Set serialNum = target.offset(0, -7)
+            
+            Set serialNum = target.Offset(0, serialNumColIndex - target.Column)
             
             Dim addEssenceSweepDelay As Integer
             addEssenceSweepDelay = 0
             
-            currentTobacco = target.offset(0, 3 - target.Column).value
-            nextTobacco = target.offset(1, 3 - target.Column).value
+            currentTobacco = target.Offset(0, tobaccoColIndex - target.Column).value
+            nextTobacco = target.Offset(1, tobaccoColIndex - target.Column).value
             
             If nextTobacco = "" Then
                 '提醒写下一批次的烟牌,并重新填写这一批次的结束时间
@@ -69,7 +80,7 @@ Private Sub Worksheet_Change(ByVal target As Range)
                 Exit Sub
             End If
             
-            dateOfSelectedRow = target.offset(0, 1 - target.Column).value
+            dateOfSelectedRow = target.Offset(0, dateColIndex - target.Column).value
             
             '行的日期为今天或者是空内容时才进行提醒
             If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
@@ -99,8 +110,8 @@ Public Sub calcuRatio()
     Dim Pt, Gt, Ct, CSettingRatio, CDiff, realRatio As Double
     Dim endTimeColumn, tobaccoNameColumn As Integer
     
-    endTimeColumn = 8
-    tobaccoNameColumn = 3
+    endTimeColumn = Util.getColumnIndex("切烘加香段", "烘丝结束时间")
+    tobaccoNameColumn = Util.getColumnIndex("切烘加香段", "牌号")
     
     lastRow = Cells(Rows.Count, endTimeColumn).End(xlUp).Row + 1
     tobaccoName = Cells(lastRow, tobaccoNameColumn)
@@ -126,13 +137,19 @@ Public Sub calcuSettingTemp()
     Dim tobaccoName As String
     Dim inputWaterContent, outputWaterContent, realTemp, vol, sxWaterAdd, stdWaterRemove, ck1 As Double
     Dim dryWeight, inputWeight, outputWeight, realWaterRemove, settingTemp As Double
+    Dim tobaccoColIndex, inputWaterColIndex, outputWaterColIndex, realTempColIndex As Integer
     
     currentRow = ActiveCell.Row
+    tobaccoColIndex = Util.getColumnIndex("切烘加香段", "牌号")
+    inputWaterColIndex = Util.getColumnIndex("切烘加香段", "来料水分")
+    outputWaterColIndex = Util.getColumnIndex("切烘加香段", "出口水分设定")
+    realTempColIndex = Util.getColumnIndex("切烘加香段", "TT1温度实际")
     
-    tobaccoName = Cells(currentRow, 3)
-    inputWaterContent = Cells(currentRow, 14)
-    outputWaterContent = Cells(currentRow, 12)
-    realTemp = Cells(currentRow, 15)
+    
+    tobaccoName = Cells(currentRow, tobaccoColIndex)
+    inputWaterContent = Cells(currentRow, inputWaterColIndex)
+    outputWaterContent = Cells(currentRow, outputWaterColIndex)
+    realTemp = Cells(currentRow, realTempColIndex)
     
     If IsEmpty(inputWaterContent) Or IsEmpty(outputWaterContent) Or IsEmpty(tobaccoName) Or IsEmpty(realTemp) Then
         Exit Sub
@@ -154,3 +171,41 @@ Public Sub calcuSettingTemp()
 End Sub
 
 
+Public Sub calcuSettingTempWithNewCk1()
+    '找出选中行的入口水分, 出口水分, 实际温度, 烟牌名
+    Dim currentRow As Long
+    Dim tobaccoName As String
+    Dim inputWaterContent, outputWaterContent, realTemp, vol, sxWaterAdd, stdWaterRemove, ck1 As Double
+    Dim dryWeight, inputWeight, outputWeight, realWaterRemove, settingTemp As Double
+    Dim tobaccoColIndex, inputWaterColIndex, outputWaterColIndex, realTempColIndex As Integer
+    
+    currentRow = ActiveCell.Row
+    tobaccoColIndex = Util.getColumnIndex("切烘加香段", "牌号")
+    inputWaterColIndex = Util.getColumnIndex("切烘加香段", "来料水分")
+    outputWaterColIndex = Util.getColumnIndex("切烘加香段", "出口水分设定")
+    realTempColIndex = Util.getColumnIndex("切烘加香段", "TT1温度实际")
+    
+    
+    tobaccoName = Cells(currentRow, tobaccoColIndex)
+    inputWaterContent = Cells(currentRow, inputWaterColIndex)
+    outputWaterContent = Cells(currentRow, outputWaterColIndex)
+    realTemp = Cells(currentRow, realTempColIndex)
+    
+    If IsEmpty(inputWaterContent) Or IsEmpty(outputWaterContent) Or IsEmpty(tobaccoName) Or IsEmpty(realTemp) Then
+        Exit Sub
+    End If
+    
+    vol = Util.getParam(tobaccoName, "烘丝秤流量")
+    sxWaterAdd = Util.getParam(tobaccoName, "SX水分增加")
+    stdWaterRemove = Util.getParam(tobaccoName, "标准除水量")
+    ck1 = Util.getParam(tobaccoName, "新ck1")
+    
+    dryWeight = vol * (1 - inputWaterContent * 0.01)
+    inputWeight = dryWeight / (1 - (inputWaterContent + sxWaterAdd) * 0.01)
+    outputWeight = dryWeight / (1 - outputWaterContent * 0.01)
+    realWaterRemove = inputWeight - outputWeight
+    
+    settingTemp = (stdWaterRemove - realWaterRemove) * ck1 + realTemp
+    
+    MsgBox "设定温度: " & Format(settingTemp, "000.0"), , tobaccoName
+End Sub
