--- a/src/64_orderSheet.xlsm/Sheet2.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet2.sheet.cls
@@ -1,5 +1,3 @@
-Option Explicit
-
 Private Sub Worksheet_Change(ByVal target As Range)
     Dim timeFormatColumns As Variant
     timeFormatColumns = Array(6, 7)
@@ -27,8 +25,8 @@ Private Sub Worksheet_Change(ByVal target As Range)
         If target.Column = beginTimeColumn And Util.IsNum(target.value) Then
             '开始时间列触发批开始语音提醒
             
-            currentTobacco = target.offset(0, 3 - target.Column).value
-            dateOfSelectedRow = target.offset(0, 1 - target.Column).value
+            currentTobacco = target.Offset(0, 3 - target.Column).value
+            dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
    
             '行的日期为今天或者是空内容时才进行提醒
             If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
@@ -44,8 +42,8 @@ Private Sub Worksheet_Change(ByVal target As Range)
             
             '注意下一批次是空白的情况
             
-            currentTobacco = target.offset(0, 3 - target.Column).value
-            nextTobacco = target.offset(1, 3 - target.Column).value
+            currentTobacco = target.Offset(0, 3 - target.Column).value
+            nextTobacco = target.Offset(1, 3 - target.Column).value
 
             If nextTobacco = "" Then
                 '提醒写下一批次的烟牌,并重新填写这一批次的结束时间
@@ -54,7 +52,7 @@ Private Sub Worksheet_Change(ByVal target As Range)
                 Exit Sub
             End If
             
-            dateOfSelectedRow = target.offset(0, 1 - target.Column).value
+            dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
             
             '行的日期为今天或者是空内容时才进行提醒
             If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
