--- a/src/64_orderSheet.xlsm/Sheet3.sheet.cls
+++ b/src/64_orderSheet.xlsm/Sheet3.sheet.cls
@@ -1,14 +1,23 @@
+Option Explicit
+
 Private Sub Worksheet_Change(ByVal target As Range)
     Dim timeFormatColumns As Variant
-    timeFormatColumns = Array(7, 8)
+    Dim beginTimeColumn, endTimeColumn As Integer
+    
+    beginTimeColumn = Util.getColumnIndex("加料段", "开始时间")
+    endTimeColumn = Util.getColumnIndex("加料段", "结束时间")
+    
+    timeFormatColumns = Array(beginTimeColumn, endTimeColumn)
     
     If Not IsArray(target.value) Then
-        Dim beginTimeColumn, endTimeColumn As Integer
         Dim currentTobacco, nextTobacco As String
         Dim dateOfSelectedRow As Variant
-
-        beginTimeColumn = 7
-        endTimeColumn = 8
+        Dim dateColIndex, tobaccoColIndex, storeNameColIndex As Integer
+        
+        dateColIndex = Util.getColumnIndex("加料段", "日期")
+        tobaccoColIndex = Util.getColumnIndex("加料段", "牌号")
+        storeNameColIndex = Util.getColumnIndex("加料段", "贮叶柜")
+        dateOfSelectedRow = target.Offset(0, dateColIndex - target.Column).value
         
         If Util.IsInArray(target.Column, timeFormatColumns) And Util.IsNum(target.value) Then
             'inputTime's column is time format, which is a double type
@@ -16,7 +25,7 @@ Private Sub Worksheet_Change(ByVal target As Range)
             
             If Util.IsIntType(target.value) Then
                 Application.EnableEvents = False
-                target.value = Others.ParseInputTime(target.value)
+                target.value = Util.ParseInputTime(target.value, dateOfSelectedRow)
                 Application.EnableEvents = True
             End If
             
@@ -25,17 +34,17 @@ Private Sub Worksheet_Change(ByVal target As Range)
         If target.Column = beginTimeColumn And Util.IsNum(target.value) Then
             '开始时间列触发批开始语音提醒
             Dim storeName As String
+
+            currentTobacco = target.Offset(0, tobaccoColIndex - target.Column).value
+            storeName = target.Offset(0, storeNameColIndex - target.Column).value
             
-            currentTobacco = target.Offset(0, 3 - target.Column).value
-            dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
-            storeName = target.Offset(0, 6 - target.Column).value
             
             'Debug.Print (currentTobacco)
             'Debug.Print dateOfSelectedRow
             'Debug.Print "贮叶柜: " & storeName
             
-            '行的日期为今天或者是空内容时才进行提醒
-            If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
+            '行的日期为今天才进行提醒
+            If dateOfSelectedRow = Date Then
                 
                 If storeName = "" Then
                     Util.speakAsync "补全储叶柜, 并重新填写加料开始时间"
@@ -59,8 +68,10 @@ Private Sub Worksheet_Change(ByVal target As Range)
             Dim feedLiquidSweepDelay As Integer
             feedLiquidSweepDelay = 0
             
-            currentTobacco = target.Offset(0, 3 - target.Column).value
-            nextTobacco = target.Offset(1, 3 - target.Column).value
+            'currentTobacco = target.Offset(0, 3 - target.Column).value
+            'nextTobacco = target.Offset(1, 3 - target.Column).value
+            currentTobacco = target.Offset(0, tobaccoColIndex - target.Column).value
+            nextTobacco = target.Offset(1, tobaccoColIndex - target.Column).value
             
             If nextTobacco = "" Then
                 '提醒写下一批次的烟牌,并重新填写这一批次的结束时间
@@ -69,15 +80,13 @@ Private Sub Worksheet_Change(ByVal target As Range)
                 Exit Sub
             End If
             
-            dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
+            'dateOfSelectedRow = target.Offset(0, 1 - target.Column).value
             
             '行的日期为今天或者是空内容时才进行提醒
-            If dateOfSelectedRow = Date Or IsEmpty(dateOfSelectedRow) Then
-                If currentTobacco <> nextTobacco Then
-                    '下一批次为不同牌号需要洗加料管, 延时10分钟
-                    feedLiquidSweepDelay = 10
-                End If
+            If dateOfSelectedRow = Date Then
                 
+                feedLiquidSweepDelay = Util.getFeedLiquidSweepDelay(nextTobacco, dateColIndex, tobaccoColIndex, target.Row)
+                'Debug.Print feedLiquidSweepDelay
                 '批结束提醒
                 Util.sheduleVoiceTips "加料", currentTobacco, "结束后", target.value, 0
                 '下一批开始前提醒
@@ -90,6 +99,15 @@ Private Sub Worksheet_Change(ByVal target As Range)
     End If
 End Sub
 
-Public Sub runFirstBatchTip()
-   Util.runFirstBatchTip "加料"
+Public Sub checkBeforeWork()
+   Util.checkBeforeWork "加料"
 End Sub
+
+Public Sub guessFinishTime()
+    Dim output As String
+    
+    output = Util.guessFinishTime("加料段")
+
+    MsgBox output
+End Sub
+
